--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,7 @@ Options +Indexes
 RewriteEngine on
 RewriteRule ^index.html$ index.php?path=index&content=home  [L]
 RewriteRule ^([\w\/]+)(?:<(.*))?$ index.php?path=index&content=$1&$2 [L]
+<Files ~ ".yml">
+  Order allow,deny
+  Deny from all
+</Files>
