reset login attempts when resetting password

--- a/password_changer.yml
+++ b/password_changer.yml
@@ -57,7 +57,7 @@ update_password:
   post:
     - read_session: email
     - sql_exec: >
-        update user set password = password('$password')
+        update user set password = password('$password'), attempts=0
         where email_address = '$email'
     - sql_values: select id uid from user where email_address = '$email'
     - write_session: uid
