--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,4 @@
 allow from all
 Options +Indexes
 RewriteEngine on
-RewriteRule ^index.html$ index.php?path=index&content=home  [L]
-RewriteRule ^([\w\/]+)(?:<(.*))?$ index.php?path=index&content=$1&$2 [L]
+RewriteRule ^(\w+)(\/\w+)?$ index.php?content=$1&$2 [L]
