--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,7 @@ allow from all
 Options +Indexes
 RewriteEngine on
 RewriteRule ^(\w+)(\/\w+)?$ index.php?content=$1&$2 [L]
+<Files ~ ".yml">
+  Order allow,deny
+  Deny from all
+</Files>
