--- a/validators.yml
+++ b/validators.yml
@@ -28,6 +28,9 @@ between:
   valid: range($1,$2,$3)
   error: $1 ($v1) must be between $v2 and $v3
 
+blank:
+  error: $name must be blank
+
 contains_at_least:
   valid: /$1/s
   error: $name must contain at least $2
@@ -222,12 +225,12 @@ za_code: /^\d{4}$/
 
 za_company_reg:
   valid:
-    - earlier_than(now(Y))
+    #- earlier_than(now(Y))
     - /^(19|20)[0-9]{2}\/?[0-9]{6}\/?[0-9]{2}$/
 
 za_id:
   valid:
-    - less_than(today)
+    # - less_than(today)
     - /^\d{2}((0[1-9])|(1[0-2]))((0[1-9])|([12][0-9])|(3[01]))\d{7}$/
 
 
