added sample config for otp email and/or otp option

--- a/config-sample.yml
+++ b/config-sample.yml
@@ -5,10 +5,16 @@ session_content: home
 db_name: mydb
 db_user: myuser
 db_password: mypassword
-sms_user: sms@example.com
-otp_methods: [email]
-otp_expiry: 5
+email_otp: yes
+sms_otp: yes
 request_method: get
 smtp_host: smtp.example.com
 smtp_user: email@example.com
 smtp_password: mypassword
+send_sms:
+  protocol: http
+  port: 80
+  host: www.qmessenger.co.za
+  user: minime
+  password: mypassword
+  path: web2sms/submit?uid=$user&pw=$password&sms=$message&da=$cellphone
