use lowercase for weekday names

--- a/controls.yml
+++ b/controls.yml
@@ -48,7 +48,7 @@ checkbox:
   attr: { type: checkbox, values: $values }
 
 checkbox_group:
-  tag: div
+  classes: div
   text: $options
   options:
     - type: checkbox
